# fastapi_template_2

./: pyproject.toml
hackathon/: app.py  database.py  models.py  schemas.py  security.py  settings.py  utils.py
hackathon/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 7dfa5a873d8f_create_users_table.py
tests/: conftest.py
tests/api/: test_get_index.py  test_users_route.py
tests/auth/: test_security.py
tests/db/: test_database_session.py
