[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["bentoluizv <bentoluizv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.0"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
email-validator = "^2.2.0"
pyjwt = "^2.9.0"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
freezegun = "^1.5.1"
python-ulid = "^3.0.0"
langchain = "^0.3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'fastapi dev hackathon/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=hackathon -vv'
post_test = 'coverage html'